--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Main</title>
+        <link rel="stylesheet" href="autocomplete.css">
     </head>
     <body>
         <script src="elm.js"></script>
